--- a/templates/main_index.html
+++ b/templates/main_index.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 
-{% load static %}
+{% load staticfiles %}
 
 {% block extCSS %}
     <link rel="stylesheet" href="{% static 'bbs_js_css/main_index.css' %}">
