--- a/static/bbs_js_css/main_index.css
+++ b/static/bbs_js_css/main_index.css
@@ -1,6 +1,24 @@
+#football{
+    margin-left: 10%;
+    width: 80%;
+}
+#football > img{
+    margin-left: 10px;
+}
+
+#football  #f1{
+    font:bold 12px/1.5em "Microsoft YaHei";
+    font-size: 24px;
+    vertical-align:bottom
+}
+#football #f2{
+    font:bold 12px/1.5em "Microsoft YaHei";
+    font-size: 16px;
+    vertical-align:bottom
+}
 
 #header{
-    margin-top: 5px;
+
     margin: 5px 10%;
     background-color: #fff;
 
