--- a/templates/main_index.html
+++ b/templates/main_index.html
@@ -5,16 +5,21 @@
 {% load static %}
 
 {% block extCSS %}
+    {{ block.super }}
     <link rel="stylesheet" href="{% static 'bbs_js_css/main_index.css' %}">
 {% endblock %}
 
 {% block header %}
+    {# 网站图标   #}
+    <div id="football">
+        <img src="{% static 'image/football.png' %}" alt="网站图标">
+        <font id="f1">足球论</font>
+        <font id="f2">—football论坛</font>
+
+
+    </div>
 
     <div id="header">
-
-{#        <div id="football">#}
-{#            <img src="{% static 'image/football.png' %}" alt="图标">#}
-{#        </div>#}
         <img src="{% static 'image/background.jpg' %}" alt="背景图片">
     </div>
 {% endblock %}
