--- a/static/bbs_js_css/main_index.css
+++ b/static/bbs_js_css/main_index.css
@@ -1,6 +1,9 @@
 #football{
+    margin-top: 0;
     margin-left: 10%;
     width: 80%;
+    /*position: relative;*/
+
 }
 #football > img{
     margin-left: 10px;
@@ -16,19 +19,118 @@
     font-size: 16px;
     vertical-align:bottom
 }
+#login{
+    /*right: 15px;*/
+    /*top: 20px;*/
+    margin-right: 20px;
+    margin-top:60px;
+    text-align:center;
+    float: right;
+
+}
+#login > a{
+    font-size: 18px;
+}
 
 #header{
 
-    margin: 5px 10%;
-    background-color: #fff;
-
+    /*margin: 5px 10%;*/
+    /*background-color: #fff;*/
+    top: 1px;
+    margin-left: 10%;
     width: 80%;
-    height: 30%;
-    position: absolute;
+    height: 280px;
+    /*position: absolute;*/
 
 }
 
 #header img{
     height: 100%;
     width: 100%;
+}
+
+#content{
+    width: 80%;
+    height: auto;
+    /*position: relative;*/
+    /*top: 30%;*/
+    margin-left:10%;
+    background-color: #fff
+}
+
+/*设置一条帖子的样式*/
+#content #card_content{
+    border-top:1px dashed #888888;
+    border-bottom:1px dashed #888888;
+    background: white;
+    height: 70px;
+    /*position: relative;*/
+}
+
+/*#content #card_content > #card_user{*/
+    /*top: 0px;*/
+    /*left: 0px;*/
+    /*width: 20%;*/
+    /*height: 100%;*/
+
+/*}*/
+/*设置帖子用户样式*/
+#content #card_content > #card_user{
+
+    width: 25%;
+    height: 100%;
+    float: left;
+    background: white;
+
+}
+#content #card_content > #card_massage{
+    width: 75%;
+    height: 100%;
+    float: right;
+    background: white;
+
+}
+
+#card_content > #card_user > #user_name{
+    height: 60%;
+    border-bottom: 1px dashed #31b0d5;
+    background: white;
+    text-align:center;
+    padding-bottom: 1px;
+}
+#card_content > #card_user > #user_name > p{
+    font-size: 18px;
+    padding-bottom: 1px;
+}
+
+#card_content > #card_user > #update_time{
+    height: 40%;
+    background: white;
+    text-align:center
+}
+#card_content > #card_user > #update_time > p{
+    font-size: 14px;
+    text-align:center
+}
+
+#card_content > #card_massage > #card_title{
+    border-bottom: 1px dashed #31b0d5;
+    height: 40%;
+}
+
+#card_content > #card_massage > #card_kaitou{
+    border-bottom: 1px dashed #31b0d5;
+    padding-top: 5px;
+}
+
+
+#card_content > #card_massage  p{
+
+    font-size: 16px;
+}
+
+
+
+ul, li, ol {
+    list-style: none;
 }
