--- a/templates/main_index.html
+++ b/templates/main_index.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 
@@ -12,10 +11,17 @@
 {% block header %}
     {# 网站图标   #}
     <div id="football">
+
         <img src="{% static 'image/football.png' %}" alt="网站图标">
         <font id="f1">足球论</font>
         <font id="f2">—football论坛</font>
 
+        {#        该部分要设置为动态的显示#}
+        <div id="login">
+            <a href="#">登录</a>
+            <font>/</font>
+            <a href="#">用户注册</a>
+        </div>
 
     </div>
 
@@ -24,8 +30,82 @@
     </div>
 {% endblock %}
 
+
 {% block content %}
     <div id="content">
+        {#  这是分类导航栏 #}
+        <nav class="navbar navbar-default">
+            <div class="container-fluid"  style="background: #e5e5e5;border-color:#e5e5e5">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-duplicate"></span></a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">看帖<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">精品</a></li>
+
+                    </ul>
+
+                    <form class="navbar-form navbar-left">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="搜索帖子">
+                        </div>
+                        <button type="submit" class="btn btn-default">搜索</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">发帖</a></li>
+                        <li><a href="#">我的帖子</a></li>
+
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+
+        {# 帖子列表样式  要做成动态的 card帖子的意思 #}
+        <div id="card_list">
+            <ul>
+                {# li 为一个帖子 #}
+                <li class="card">
+
+                    <div id="card_content">
+                        {# 帖子的用户信息#}
+                        <div id="card_user" style="border: 2px dashed #843534">
+
+                            <div id="user_name">
+                                <p>用户名</p>
+                            </div>
+                            <div id="update_time">
+                                <p >更新时间：xxxx年xx月xx日</p>
+                            </div>
+
+                        </div>
+                        {# 帖子的信息 #}
+                        <div id="card_massage" style="border: 2px dashed #67b168" >
+
+                            <div id="card_title">
+                                <p>这是帖子的标题</p>
+                            </div>
+                            <div id="card_kaitou">
+                                <p>这是帖子的开头缩略部分...</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </li>
+            </ul>
+
+        </div>
 
     </div>
 {% endblock %}
