--- a/templates/main_index.html
+++ b/templates/main_index.html
@@ -35,7 +35,7 @@
     <div id="content">
         {#  这是分类导航栏 #}
         <nav class="navbar navbar-default">
-            <div class="container-fluid"  style="background: #e5e5e5;border-color:#e5e5e5">
+            <div class="container-fluid" style="background: #e5e5e5;border-color:#e5e5e5">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -63,7 +63,7 @@
                         <button type="submit" class="btn btn-default">搜索</button>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">发帖</a></li>
+                        <li><a href="{% url 'bbs:creade_card' %}">发帖</a></li>
                         <li><a href="#">我的帖子</a></li>
 
                     </ul>
@@ -75,34 +75,36 @@
         <div id="card_list">
             <ul>
                 {# li 为一个帖子 #}
-                <li class="card">
+                {% for card in cards %}
+                    <li class="card">
 
-                    <div id="card_content">
-                        {# 帖子的用户信息#}
-                        <div id="card_user" style="border: 2px dashed #843534">
+                        <div id="card_content">
+                            {# 帖子的用户信息#}
+                            <div id="card_user" style="border: 2px dashed #843534">
 
-                            <div id="user_name">
-                                <p>用户名</p>
+                                <div id="user_name">
+                                    <p>用户名</p>
+                                </div>
+                                <div id="update_time">
+                                    <p>{{ card.card_create_time }}</p>
+                                </div>
+
                             </div>
-                            <div id="update_time">
-                                <p >更新时间：xxxx年xx月xx日</p>
+                            {# 帖子的信息 #}
+                            <div id="card_massage" style="border: 2px dashed #67b168">
+
+                                <div id="card_title">
+                                    <p>{{ card.card_title }}</p>
+                                </div>
+                                <div id="card_kaitou">
+                                    <p>{{ card.card_content }}</p>
+                                </div>
+
                             </div>
 
                         </div>
-                        {# 帖子的信息 #}
-                        <div id="card_massage" style="border: 2px dashed #67b168" >
-
-                            <div id="card_title">
-                                <p>这是帖子的标题</p>
-                            </div>
-                            <div id="card_kaitou">
-                                <p>这是帖子的开头缩略部分...</p>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </li>
+                    </li>
+                {% endfor %}
             </ul>
 
         </div>
