加入图标链接

--- a/templates/create_card.html
+++ b/templates/create_card.html
@@ -13,7 +13,7 @@
     {# 网站图标   #}
     <div id="football">
 
-        <img src="{% static 'image/football.png' %}" alt="网站图标">
+        <a href="{% url 'bbs:index' %}"><img src="{% static 'image/football.png' %}" alt="网站图标"></a>
         <font id="f1">足球论</font>
         <font id="f2">—football论坛</font>
 
