--- a/templates/base.html
+++ b/templates/base.html
@@ -20,18 +20,22 @@
 </head>
 <body>
 
-        {# 创建个基模板 #}
-        {% block header %}
+    {# 创建个基模板 #}
+    {% block header %}
 
-        {% endblock %}
+    {% endblock %}
 
-        {% block content %}
+    {% block content %}
 
-        {% endblock %}
+    {% endblock %}
 
-        {% block footer %}
+    {% block footer %}
 
-        {% endblock %}
+    {% endblock %}
+    
+    {% block extJS %}
+    
+    {% endblock %}    
     <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/swiper.jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
