--- a/templates/base_title.html
+++ b/templates/base_title.html
@@ -2,10 +2,6 @@
 
 {% load static %}
 
-{% extends 'base.html' %}
-
-
-{% load static %}
 
 {% block extCSS %}
     {{ block.super }}
@@ -43,4 +39,8 @@
     <div id="footer">
         <p>©2018版权所有 足球论—Football论坛 | 京ICP证 XXXXX号</p>
     </div>
+{% endblock %}
+
+{% block extJS %}
+
 {% endblock %}
